# nicegui-TableCellSlotsSolver

./: .gitignore  README.md  pyproject.toml  test.py
src/: easySlot.js  easySlot.py  placeholder.js  placeholder.py
