[tool.poetry]
name = "nicegui-tablecellslotssolver"
package-mode = false
version = "0.1.0"
description = ""
authors = ["CrystalWindSnake <568166495@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nicegui = "^1.4.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
